--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <script src="{{ url_for('static', filename='script.js') }}"></script>
     <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='apple-touch-icon.png')}}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon-32x32.png')}}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon-16x16.png')}}">
+    <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest')}}">
   </head>
   <body>
     <h1 style="color:seagreen;">Destación</h1>
