--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -9,6 +9,15 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon-32x32.png')}}">
     <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon-16x16.png')}}">
     <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest')}}">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-163957999-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-163957999-1');
+  </script>
   </head>
   <body>
     <h1 style="color:seagreen;">Destación</h1>
