--- a/webapp/static/style.css
+++ b/webapp/static/style.css
@@ -1,7 +1,7 @@
 body {
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   text-align: center;
-  background-color: beige;
+  background-color: #f1f0ef;
 }
 
 p {
