--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -20,7 +20,7 @@
   </script>
   </head>
   <body>
-    <h1 style="color:seagreen;">Destación</h1>
+    <h1 style="color:#3c492d;">Destación</h1>
     <p>{{ time|safe }}</p>
   </body>
 </html>
