--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Destación</title>
+    <meta name="description" content="Verduras y frutas de estación en Argentina, al alcance de tu mano. Comer bien, hace bien.">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- <script src="{{ url_for('static', filename='script.js') }}"></script> -->
     <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
