--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -21,7 +21,7 @@
   </script>
   </head>
   <body>
-    <h1 style="color:#3c492d;">Destación</h1>
+    <h1><img src="{{ url_for('static', filename='header-820x312.png')}}" width="350"/></h1>
     <p>{{ time|safe }}</p>
   </body>
 </html>
