--- a/webapp/static/style.css
+++ b/webapp/static/style.css
@@ -2,8 +2,73 @@ body {
   font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
   text-align: center;
   background-color: #f1f0ef;
+  margin: 0;  /* Para que no rellene de forma predeterminada */
+  /*padding: 0;  Para que no rellene de forma predeterminada */
 }
 
 p {
   white-space: pre-wrap;
+  padding: 30px;
+}
+
+/* Todo lo de abajo es lo necesario para separar las partes del sitio y que cada una funcione como hablamos */
+a {
+  text-decoration: none;
+  color: #3f4830
+}
+
+section {
+  -webkit-transition: all 0.8s ease-in-out;
+  -moz-transition: all 0.8s ease-in-out;
+  -o-transition: all 0.8s ease-in-out;
+  transition: all 0.8s ease-in-out;
+}
+
+section:target {
+  margin-top: 0%;
+  background-color: #f1f0ef;
+}
+
+#content {
+  /*padding: 0; */
+  height: 100vh; /* Esto le dice al #content que ocupe el 100% del alto del dispositivo */
+  background-color: #f1f0ef;
+}
+
+#footer {
+  padding: 0;
+  position: absolute;
+  bottom: 0;
+  height: 50px;
+  width: 100%;
+}
+
+#about {
+  transition-timing-function: ease;
+  padding: 15px;
+  /*margin: 0;
+  height: 100vh; */
+  background-color:#daa2ba;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+#myBtn {
+  display: none; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color:#f1f0ef ; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 10px; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+}
+
+#myBtn:hover {
+  background-color: #f1f0ef; /* Add a dark-grey background on hover */
 }
