--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="top">
+<html lang="es" id="top">
   <head>
     <title>Destación</title>
     <meta
@@ -10,10 +10,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
-    
     <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -52,7 +51,7 @@
   </head>
   <body>
     <section id="content">
-      <h1><img src="{{ url_for('static', filename='header-820x312.png')}}" width="350px" /></h1>
+      <h1><img src="{{ url_for('static', filename='header-820x312.png')}}" alt="Header Destación" width="350px" /></h1>
       <p>{{ time|safe }}</p>
       <div id="footer"><a href="#about"><b>¿Querés saber más?</b></a></div>
     </section>
