--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -63,7 +63,8 @@
       <a href="https://twitter.com/_destacion" target="_blank"><b>Twitter</b></a> // <a href="https://www.instagram.com/_destacion/" target="_blank"><b>Instagram</b></a>
       <br><br>
       ¿Tenés feedback? Escribinos a <a href="mailto:holadestacion@gmail.com"><b>holadestacion@gmail.com</b></a>
-      <br><br><br><br>
+      💚
+      <br><br>{{ space|safe }}<br><br><br><br><br>
     </section>
     <a href="#top"><button id="myBtn" title="Go to top"><i class="fa fa-angle-up" style="font-size:25px;color:#3f4830"></i></button></a>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
