--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,39 +1,21 @@
 <!DOCTYPE html>
 <html lang="es" id="top">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="Verduras y frutas de estación en Argentina, al alcance de tu mano. Comer bien, hace bien.">
+    <!-- HTML Meta Tags -->
     <title>Destación</title>
-    <meta
-      name="description"
-      content="Verduras y frutas de estación en Argentina, al alcance de tu mano. Comer bien, hace bien."
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, maximum-scale=1"
-    />
+    <meta name="keywords" content="verduras, verdura, frutas, fruta, estación, estacion, argentina">
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Destación">
+    <meta itemprop="description" content="Verduras y frutas de estación en Argentina, al alcance de tu mano. Comer bien, hace bien.">
     <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="{{ url_for('static', filename='apple-touch-icon.png')}}"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="{{ url_for('static', filename='favicon-32x32.png')}}"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="{{ url_for('static', filename='favicon-16x16.png')}}"
-    />
-    <link
-      rel="manifest"
-      href="{{ url_for('static', filename='site.webmanifest')}}"
-    />
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='apple-touch-icon.png')}}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='favicon-32x32.png')}}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='favicon-16x16.png')}}">
+    <link rel="manifest" href="{{ url_for('static', filename='site.webmanifest')}}">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
