Updated meta tags

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="es" id="top">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Verduras y frutas de estación en Argentina, al alcance de tu mano. Comer bien, hace bien.">
     <!-- HTML Meta Tags -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Destación</title>
+    <meta name="title" content="Destación">
+    <meta name="description" content="Verduras y frutas de estación en Argentina, al alcance de tu mano. Comer bien, hace bien.">
     <meta name="keywords" content="verduras, verdura, frutas, fruta, estación, estacion, argentina">
     <!-- Google / Search Engine Tags -->
     <meta itemprop="name" content="Destación">
     <meta itemprop="description" content="Verduras y frutas de estación en Argentina, al alcance de tu mano. Comer bien, hace bien.">
+    <meta itemprop="image" content="https://destacion.com.ar/static/header-820x312.png">
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://destacion.com.ar">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Destación">
+    <meta property="og:description" content="Verduras y frutas de estación en Argentina, al alcance de tu mano. Comer bien, hace bien.">
+    <meta property="og:image" content="https://destacion.com.ar/static/header-820x312.png">
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Destación">
+    <meta name="twitter:description" content="Verduras y frutas de estación en Argentina, al alcance de tu mano. Comer bien, hace bien.">
+    <meta name="twitter:image" content="https://destacion.com.ar/static/header-820x312.png">
     <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
