--- a/webapp/static/style.css
+++ b/webapp/static/style.css
@@ -3,11 +3,12 @@ body {
   text-align: center;
   background-color: #f1f0ef;
   margin: 0;
+  padding: 0;
 }
 
 p {
   white-space: pre-wrap;
-  padding: 30px;
+  padding: 0px 30px 30px 30px;
 }
 
 a {
